--- a/src/components/Secondcategory.css
+++ b/src/components/Secondcategory.css
@@ -14,7 +14,10 @@
 
 .second-category-wrap {
   margin-top: 8rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
+
 .second-category-header {
   display: flex;
   align-items: center;
@@ -29,7 +32,6 @@
   margin: 0;
   font-size: 30px;
   color: #333;
-
   position: relative;
   padding-bottom: 5px;
 }
@@ -58,7 +60,12 @@
 
 .second-category-footer {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 4.5rem;
+  align-items: stretch;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
+.second-category-footer > * {
+  flex: 1;
+  min-width: 200px;
 }
