--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -1,32 +1,62 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.slider-image {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.slick-slide {
+  transition: transform 0.3s ease;
+}
+
+.slick-slide:hover {
+  transform: scale(1.01);
+}
+
 .slick-prev,
 .slick-next {
-  z-index: 1;
-  width: 40px;
-  height: 40px;
-  background-color: rgba(51, 51, 51, 0.7);
+  z-index: 2;
+  width: 100px;
+  height: 100px;
+  background-color: #ffffff;
+  border: 2px solid #e6f0f6;
   border-radius: 50%;
-  display: flex;
+  display: flex !important;
   align-items: center;
   justify-content: center;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .slick-prev:hover,
 .slick-next:hover {
-  background-color: rgba(85, 85, 85, 0.9);
+  background-color: #f2faff;
+  border-color: #cce4f3;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
 }
 
 .slick-prev::before,
 .slick-next::before {
-  font-size: 20px;
+  font-size: 28px;
+  color: #007dc5;
+  opacity: 1;
 }
 
 .slick-prev {
-  left: -45px;
+  left: -2rem;
 }
 
 .slick-next {
-  right: -45px;
+  right: -2rem;
 }
 
 .slick-dots li button:before {
@@ -36,25 +66,4 @@
 
 .slick-dots li.slick-active button:before {
   color: #333;
-}
-
-.slick-slide h3 {
-  font-size: 24px;
-  font-weight: bold;
-  color: #fff;
-  border-radius: 10px;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-}
-
-.slick-slide {
-  transition: transform 0.3s ease;
-}
-.slick-slide:hover {
-  transform: scale(1.01);
-}
-.slider-image {
-  width: 100%;
-  height: 300px;
-  object-fit: cover;
-  border-radius: 10px;
 }
